1 - Change of the Categoria type in the Produto to Object entity
2 - Implementation in the Produto controller in POST and PUT requests

3 - Reduction of lines of code by excluding imports in files

4 - Fixing the quarkus.hibernate-orm.database.generation property in the application.properties file

5 - Correcting the product category banana nanica in the import.sql file

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,7 @@ quarkus.datasource.username=sa
 quarkus.datasource.password=sa
 spring.h2.console.enabled=true
 spring.jpa.hibernate.ddl-auto=update
+quarkus.hibernate-orm.packages=org.mercadodominio.models.entities
 quarkus.hibernate-orm.database.generation=drop-and-create
 quarkus.http.port=8080
 quarkus.http.root-path=/
